# OOP

./: .flake8  main.py  pyproject.toml  requirements.txt
src/: __init__.py  category.py  data_loader.py  models.py
tests/: __init__.py  test_entities.py
