[project]
name = "oop"
version = "0.1.0"
description = ""
authors = [
    {name = "yuliyaBarashka",email = "zohn12333@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=26.3.0,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
